Natter Changelog

Version: 4.10.1
Date: April 27, 2009
 - MultiChat is finally here!  When enabled, users may switch between sets of
   post form data without needing to load multiple chat tabs or windows.

Version: 4.10.0
Codename: Ingress
Date: April 23, 2009
 - Natter now requires Perl 5.8.  Nobody should realistically be running
   anything older than that in production.  Seriously, folks, upgrade.
 - The list of required non-standard Perl modules is now:
	- DateTime
	- DBI
	- DBD::SQLite
 - Natter now bundles the JSON Perl module from CPAN and uses JSON::PP.  This
   would be done with the others, however those require platform-specific binary
   modules.  While DBI::PP exists, DBD::SQLite::PP doesn't.  Thank goodness.
 - Massively overhauled the session system.
    - Now uses an SQLite database to store sessions.
    - Sessions can not be migrated.  Users will be kicked out after the upgrade
      and must re-enter the chat password and re-COPPA-ize.  Don't upgrade when
      people are using the chat, and they'll never notice.
    - Sessions are now 12 hours in length.  Users with a session cookie that
      return to the chat after more than 12 hours may be asked to re-enter.
    - All previous cookies have been retired in favor of the session cookie.
    - Bots and Proxies may be impacted.  See notes below.
 - Massively overhauled the ban system.
    - Now uses an SQLite database to store bans.
    - Migration of old bans will occur on the first login to the guard frameset.
    - Session bans are now recorded in the ban logs.
    - Session bans are now limited to 12 hours in length.
    - Lifted, cleared bans are no longer deleted from the ban log.  They may now
      be viewed by using links on the ban log page.
 - Refactored the internal script structures.  Script output is now done through
   a single established code path.  Output is now accompanied with extra
   informative HTTP headers.  This may help eliminate the "the server is telling