@@ -4,6 +4,8 @@ Version: 4.10.1
 Date: April 27, 2009
  - MultiChat is finally here!  When enabled, users may switch between sets of
    post form data without needing to load multiple chat tabs or windows.
+ - Users can no logner manipulate the chat into posting extra "A user has
+   entered the chat" messages.
 
 Version: 4.10.0
 Codename: Ingress
